--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "prod": "npm run build && npm run start",
     "seed:inventory:dev": "cross-env NODE_ENV=development  ts-node src/seed/inventory.seed.ts",
     "seed:inventory:prod": "cross-env NODE_ENV=production ts-node src/seed/inventory.seed.ts",
-    "start:worker":"cross-env NODE_ENV=development npx ts-node src/services/orderConsumer.ts"
+    "start:worker": "cross-env NODE_ENV=development npx ts-node src/services/orderConsumer.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-ses": "^3.758.0",
     "@aws-sdk/client-sqs": "^3.758.0",
+    "@aws-sdk/util-retry": "^3.370.0",
     "@types/joi": "^17.2.2",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
