--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "xshipment",
   "version": "1.0.0",
-  "description": "",
+  "description": " here i added script for pm2 and normal npm script also",
   "main": "dist/index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon",
-    "build": "rm -rf dist && tsc",
+    "build": "tsc",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "prod": "cross-env NODE_ENV=production nodemon",
     "seed:inventory:dev": "cross-env NODE_ENV=development  ts-node src/seed/inventory.seed.ts",
     "seed:inventory:prod": "cross-env NODE_ENV=production ts-node src/seed/inventory.seed.ts",
     "start:worker:dev": "cross-env NODE_ENV=development npx ts-node src/services/orderConsumer.ts",
-    "start:worker:prod": "cross-env NODE_ENV=production npx ts-node src/services/orderConsumer.ts"
+    "start:worker:prod": "cross-env NODE_ENV=production npx ts-node src/services/orderConsumer.ts",
+    "start:worker:pm2:prod": "cross-env NODE_ENV=production pm2 start ts-node -- src/services/orderConsumer.ts && pm2 logs ts-node",
+    "start:worker:pm2:dev": "cross-env  NODE_ENV=development pm2 start ts-node -- src/services/orderConsumer.ts && pm2 logs ts-node",
+    "stop:worker": "pm2 stop ts-node && pm2 delete ts-node",
+    "pm2:flush:logs": "pm2 flush",
+    "start:worker:deploy": "npm run build && pm2 start dist/services/orderConsumer.js --name ts-node && pm2 logs ts-node"
   },
   "author": "",
   "license": "ISC",
@@ -42,12 +47,13 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.13.8",
+    "@types/node": "^22.13.9",
     "@types/nodemailer": "^6.4.17",
     "@types/winston": "^2.4.4",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.9",
+    "pm2": "^5.4.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.8.2"
   }
 }
