--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "start:worker:pm2:dev": "cross-env  NODE_ENV=development pm2 start ts-node -- src/services/orderConsumer.ts && pm2 logs ts-node",
     "stop:worker": "pm2 stop ts-node && pm2 delete ts-node",
     "pm2:flush:logs": "pm2 flush",
-    "start:worker:deploy": "npm run build && pm2 start dist/services/orderConsumer.js --name ts-node && pm2 logs ts-node"
+    "start:worker:deploy": "npm run build && pm2 start dist/services/orderConsumer.js --name ts-node && pm2 logs ts-node",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -46,13 +49,16 @@
     "@types/cors": "^2.8.17",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.9",
     "@types/nodemailer": "^6.4.17",
     "@types/winston": "^2.4.4",
     "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "pm2": "^5.4.3",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
